deploy/manifests/output/out.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: b
---
apiVersion: v1
kind: Service
metadata:
  name: swagger-ui
  namespace: b
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: swagger-ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: swagger-ui
  name: swagger-ui
  namespace: b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: swagger-ui
  template:
    metadata:
      labels:
        app: swagger-ui
    spec:
      containers:
      - env:
        - name: BASE_URL
          value: /swagger-ui/
        - name: API_URLS
          value: '[ {url:''swagger-api/bookly.json'',name:''swagger api''} ]'
        image: swaggerapi/swagger-ui:v3.49.0
        name: swagger-ui
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /usr/share/nginx/html/swagger-api
          name: swagger-api
      volumes:
      - configMap:
          name: swagger-api-2b6gggb54c
        name: swagger-api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: bookly-ingress
  namespace: b
spec:
  rules:
  - host: b.localhost
    http:
      paths:
      - backend:
          service:
            name: swagger-ui
            port:
              number: 8080
        path: /swagger-ui
        pathType: Prefix
